--- a/URL_Shortner_Project/views/index.ejs
+++ b/URL_Shortner_Project/views/index.ejs
@@ -23,7 +23,21 @@
         </form>
         <h2>Shortener URLs</h2>
         <ul>
-            {{ shortened_urls }}
+            <!-- {{ shortened_urls }} -->
+
+            <!-- Object.entries(links).map(([code, url]) => 
+            { 
+                return `<li><a href="/${code}" target="_blank">${req.headers.host}/${code}</a> - ${url}</li>`;
+            }).join("") -->
+
+            <% Object.entries(links).map(([code, url]) => { %>
+                <% const truncatedURL = url.length >= 30 ? `${url.slice(0, 30)}...` : url; %>
+            <li>
+                <a href="/<%= code %>" target="_blank">
+                    <%= host %>/<%= code %>
+                </a> - <%= truncatedURL %>
+            </li>
+            <% }) %>
         </ul>
     </div>
     
